Fix fetching data problem/ fix user image align in history block

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,14 +6,15 @@
   margin-bottom: 8px;
 }
 
-.gh-username img{
+.gh-username img {
+  vertical-align: middle;
   width: 32px;
 }
 
-#profile-bio{
-  margin-top:10px;
+.profile-bio-content {
+  margin-top: 10px;
 }
 
 .timeline .timeline-item {
-  padding-bottom:1em;
+  padding-bottom: 1em;
 }
